<resources>
    <string name="app_name">yesterday-headline</string>
    <string name="app_name_ch">昨日头条</string>
    <!--    button/ menu text -->
    <string name="select_category">Type</string>
    <string name="search">Search</string>
    <string name="others">Others</string>
    <string name="history">查看历史</string>
    <string name="clear_cache">清除缓存</string>
    <string name="wechat">微信</string>
    <string name="sina">新浪</string>
    <string name="stats">Stats</string>
    <string name="share">分享</string>


    <!--    type relevant -->
    <string name="edit">编辑</string>
    <string name="edit_explain">点击进入频道</string>
    <string name="done_explain">点击删除频道</string>
    <string name="done">完成</string>
    <string name="type_in">我的频道</string>
    <string name="type_out">为你推荐</string>
    <string name="type_out_detail">点击添加频道</string>

    <!--    test string -->
    <string name="test">Please wait a moment</string>
    <string name="test_source">XinHua 2020-08-23</string>
    <string name="test_text">I think I\'m falling for you. If you don\'t call me, I\'ll jump off the roof.</string>
    <string name="www">wu wu wu</string>

    <!--    covid data entry    -->
    <string-array name="year">
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>


    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>