<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolBar">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name_ch"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

<!--        <SearchView-->
<!--            android:id="@+id/search_button"-->
<!--            android:iconifiedByDefault="true"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end"-->
<!--            />-->
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/test"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:lineSpacingMultiplier="0.9" />

    <TextView
        android:id="@+id/news_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/test_source"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/news_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/test_source"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/news_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="" />

    <TextView
        android:id="@+id/news_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/test_text"
        android:textSize="20sp" />


</LinearLayout>