<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_type_in"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="30dp"
        android:id="@+id/arr_channel"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/type_in"
            android:textSize="30sp"
            android:textColor="@color/myBlack"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:id="@+id/text_type_explain"
            android:text="@string/edit_explain"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/myGray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_type_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/edit"
            android:textColor="@color/myRed"
            android:textSize="17sp" />
    </LinearLayout>

    <com.java.libingrui.MyGridLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/grid1"
        android:columnCount="4"
        >

    </com.java.libingrui.MyGridLayout>


</LinearLayout>