<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/news_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:orientation="vertical" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolBar">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name_ch"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp" />

            <!--        <SearchView-->
            <!--            android:id="@+id/search_button"-->
            <!--            android:iconifiedByDefault="true"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_gravity="end"-->
            <!--            />-->
        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/scholar_brief_cardview"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp" >


        <LinearLayout
            android:id="@+id/scholar_brief_list"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:id="@+id/scholar_brief_pic"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginHorizontal="0dp"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/scholar_img"
                    android:layout_width="wrap_content"
                    android:minWidth="5dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/candle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/scholar_brief_info"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="5dp">


                <TextView
                    android:id="@+id/scholar_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/test"
                    android:textColor="@color/myBlack"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:lineSpacingMultiplier="0.9" />

                <TextView
                    android:id="@+id/scholar_affiliation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/myBlack"
                    android:text="@string/test_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/scholar_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/myBlack"
                    android:text="@string/test_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/scholar_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="" />

            </LinearLayout>
        </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>