<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/entity_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolBar">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name_ch"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp" />

            <!--        <SearchView-->
            <!--            android:id="@+id/search_button"-->
            <!--            android:iconifiedByDefault="true"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_gravity="end"-->
            <!--            />-->
        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:minHeight="50dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp">

<!--            entity detail -->
            <LinearLayout
                android:id="@+id/test_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/entity_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/test"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:lineSpacingMultiplier="0.9" />


                <TextView
                    android:id="@+id/entity_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="" />

                <TextView
                    android:id="@+id/entity_wiki"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:padding="1dp"
                    android:scrollbars="vertical"
                    android:layout_marginBottom="10dp"
                    android:text="@string/test_text"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/entity_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:minHeight="50dp"
                    android:layout_marginTop="10dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:minHeight="50dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp">

            <!--            relation detail -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="Relations"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:lineSpacingMultiplier="0.9" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_entity_relation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:minHeight="50dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp">

            <!--            property detail -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="Properties"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:lineSpacingMultiplier="0.9" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_entity_property"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>